--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,8 +7,7 @@
 body {
     background: url(/starter-code/assets/home/background-home-desktop.jpg);
     background-repeat: no-repeat;
-    background-size: auto;
-    background-position: center;
+    background-size: 120rem;
     color: white;
 }
 nav {
