--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,20 +116,22 @@ nav {
         background-color: transparent;
         align-items: flex-start;
         padding: 0;
-        width: 20%;
+        width: 29%;
         margin-top: 0px;
         position: absolute;
-        left: 75%;
+        left: 60%;
         top: 5%;
     }
     .nav-list a{
         background-color: white;
         color: black;
-        width: 90px;
-        margin: 2px;
+        width: 120px;
+        margin: 5px;
         border-radius: 20px;
-        padding: 1px 5px;
+        padding: 2px 10px;
         display: block;
+        font-size: 14px;
+
     }
     .togglemenu{
         display: none;
