--- a/styles/destinations.css
+++ b/styles/destinations.css
@@ -77,6 +77,7 @@ body {
     .destination-description{
         padding: 0 30px;
         padding-bottom: 20px;
+        text-align: center;
     }
     .location{
         font-size: 7rem;
